# fastapi-react-mongodb-docker

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build.yml  lint.yml  test.yml
backend/: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/auth/: auth.py
backend/app/config/: config.py  logging.py
backend/app/models/: users.py
backend/app/routers/: api.py  login.py  users.py
backend/app/schemas/: __init__.py  tokens.py  users.py
backend/app/tests/: conftest.py  utils.py
backend/app/tests/routers/: test_login.py  test_users.py
backend/tests/: conftest.py  utils.py
backend/tests/routers/: test_login.py  test_users.py
frontend/: .env.development  .env.production  .env.test  .eslintrc.json  .prettierrc.json  Dockerfile  Dockerfile.development  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: axios.ts  error-page.tsx  fallback.tsx  main.tsx  router.tsx  theme.tsx
frontend/src/components/: AlertSnackBar.tsx  LoginForm.test.tsx  LoginForm.tsx  RegisterForm.test.tsx  RegisterForm.tsx  TopMenuBar.test.tsx  TopMenuBar.tsx  UserProfile.test.tsx  UserProfile.tsx
frontend/src/contexts/: auth.tsx  snackbar.tsx
frontend/src/models/: user.ts
frontend/src/routes/: home.tsx  login.tsx  profile.tsx  register.tsx  root.tsx  sso.login.tsx  users.test.tsx  users.tsx
frontend/src/services/: auth.service.ts  user.service.ts
