[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "farm-docker"
version = "1.3.0"
description = "Backend API for farm-docker"
readme = "README.md"
license = { text = "MIT" }
authors = [
    {name = "Jonas Renault", email = "jonasrenault@gmail.com"},
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "pymongo>=4.13.0",
    "fastapi[standard]>=0.115.12",
    "python-multipart>=0.0.20",
    "motor>=3.7.1",
    "pydantic>=2.11.4",
    "email-validator>=2.2.0",
    "python-jose>=3.4.0",
    "passlib>=1.7.4",
    "bcrypt>=4.3.0",
    "beanie>=1.29.0",
    "python-dotenv>=1.1.0",
    "fastapi-sso>=0.18.0",
    "pydantic-settings>=2.9.1",
]

[project.urls]
"Homepage" = "https://github.com/jonasrenault/fastapi-react-mongodb-docker#readme"
"Repository" = "https://github.com/jonasrenault/fastapi-react-mongodb-docker"

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "black>=25.1.0",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.10",
]

[tool.black]
line_length = 90
target_version = ['py312']

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]
src = ["app", "tests"]
line-length = 90

[tool.ruff.lint]
ignore = []
select = [
    "E",
    "F",
    "W",
    "I001",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
known_first_party = ["app"]

[tool.mypy]
files = ["app", "tests"]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    'ignore::DeprecationWarning',
]
